
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "whcat_timer"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
chrono-tz = "0.10"
cron = "0.15"
serde_json = "1"
parking_lot = "0.12"

[dependencies.chrono]
version = "0.4"
features = ["serde","clock"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4","serde"]

[dependencies.rusqlite]
version = "0.32"
optional = true
features = ["bundled"]

[features]
default = []
sqlite = ["dep:rusqlite"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
panic = "unwind"
